<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>deepracer_core</name>
  <version>0.0.0</version>
  <description>deepracer_core</description>
  <maintainer email="zz00800@yonsei.ac.kr">sanghoon</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>ros2_teleop_keyboard</depend>
  <depend>deepracer_interfaces_pkg</depend>
  <depend>deepracer_teleop_keyboard</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
